--- a/_project_starter_/index.html
+++ b/_project_starter_/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
-    <title>My Project</title>
+    <title>Expanding Cards/title>
 </head>
 <body>
-    <h1>Project Starter</h1>
+
     <script src="script.js"></script>
 </body>
 </html>
